@@ -3,7 +3,7 @@
  */
 
 /*
-  wxHarbour: a portable GUI for [x]Harbour Copyright (C) 2006 Teo Fonrouge
+  wxHarbour: a portable GUI for [x]Harbour Copyright (C) 2009 Teo Fonrouge
 
   This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.
 
@@ -11,12 +11,12 @@
 
   You should have received a copy of the GNU Lesser General Public License along with this library; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-  (C) 2006 Teo Fonrouge <teo@windtelsoft.com>
+  (C) 2009 Teo Fonrouge <teo@windtelsoft.com>
 */
 
 /*
   wx_EvtHandler
-  Teo. Mexico 2008
+  Teo. Mexico 2009
 */
 
 #include "wx/wx.h"
@@ -27,6 +27,246 @@
 #include "wx/timer.h"
 
 static void ParseConnectParams( PCONN_PARAMS pConnParams );
+
+/*
+  __OnEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::__OnEvent( wxEvent &event )
+{
+  PHB_ITEM pEvent = hb_itemNew( hb_stackReturnItem() );
+  wxh_ObjParams objParams = wxh_ObjParams( pEvent );
+
+  objParams.Return( &event );
+
+  if( objParams.pWxh_Item )
+  {
+    objParams.pWxh_Item->delete_WX = false;
+    wxh_Item* pWxh_Item = wxh_ItemListGet_PWXH_ITEM( this );
+
+    if( pWxh_Item )
+    {
+      qoutf("@");
+      for( vector<PCONN_PARAMS>::iterator it = pWxh_Item->evtList.begin(); it < pWxh_Item->evtList.end(); it++ )
+      {
+        qqoutf("1");
+        PCONN_PARAMS pConnParams = *it;
+        if( event.GetEventType() == pConnParams->eventType ) /* TODO: this check is needed ? */
+        {
+          qqoutf("GetId: %d", event.GetId() );
+          if( pConnParams->force || ( event.GetId() == wxID_ANY ) || ( event.GetId() >= pConnParams->id && event.GetId() <= pConnParams->lastId ) )
+          {
+            hb_vmEvalBlockV( pConnParams->pItmActionBlock, 1 , pEvent );
+          }
+        }
+      }
+    }
+  }
+
+  //wxh_ItemListDel_HB( pEvent );
+  hb_itemRelease( pEvent ); //this has to be done on above line
+}
+
+/*
+  OnActivateEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnActivateEvent( wxActivateEvent& event )
+{
+  HB_FUNC_EXEC( WXACTIVATEEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnCloseEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnCloseEvent( wxCloseEvent& event )
+{
+  HB_FUNC_EXEC( WXCLOSEEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnCommandEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnCommandEvent( wxCommandEvent& event )
+{
+  HB_FUNC_EXEC( WXCOMMANDEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnFocusEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnFocusEvent( wxFocusEvent& event )
+{
+  HB_FUNC_EXEC( WXFOCUSEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnGridEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnGridEvent( wxGridEvent& event )
+{
+  HB_FUNC_EXEC( WXGRIDEVENT );
+  __OnEvent( event );
+}
+
+/*
+ OnInitDialogEvent
+ Teo. Mexico 2009
+ */
+template <class T>
+void hbEvtHandler<T>::OnInitDialogEvent( wxInitDialogEvent& event )
+{
+  HB_FUNC_EXEC( WXINITDIALOGEVENT );
+  __OnEvent( event );
+}
+
+/*
+ OnKeyEvent
+ Teo. Mexico 2009
+ */
+template <class T>
+void hbEvtHandler<T>::OnKeyEvent( wxKeyEvent& event )
+{
+  HB_FUNC_EXEC( WXKEYEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnMenuEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnMenuEvent( wxMenuEvent& event )
+{
+  HB_FUNC_EXEC( WXMENUEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnMouseEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnMouseEvent( wxMouseEvent& event )
+{
+  HB_FUNC_EXEC( WXMOUSEEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnSocketEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnSocketEvent( wxSocketEvent& event )
+{
+  HB_FUNC_EXEC( WXSOCKETEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnTaskBarIconEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnTaskBarIconEvent( wxTaskBarIconEvent& event )
+{
+  HB_FUNC_EXEC( WXTASKBARICONEVENT );
+  __OnEvent( event );
+}
+
+/*
+  OnTimerEvent
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::OnTimerEvent( wxTimerEvent& event )
+{
+  HB_FUNC_EXEC( WXTIMEREVENT );
+  __OnEvent( event );
+}
+
+/*
+  wxConnect
+  Teo. Mexico 2009
+*/
+template <class T>
+void hbEvtHandler<T>::wxhConnect( int evtClass, PCONN_PARAMS pConnParams )
+{
+  wxObjectEventFunction objFunc = NULL;
+
+  switch( evtClass )
+  {
+    case WXH_ACTIVATEEVENT:
+      objFunc = wxActivateEventHandler( hbEvtHandler<T>::OnActivateEvent );
+      break;
+    case WXH_CLOSEEVENT:
+      objFunc = wxCloseEventHandler( hbEvtHandler<T>::OnCloseEvent );
+      break;
+    case WXH_COMMANDEVENT:
+      objFunc = wxCommandEventHandler( hbEvtHandler<T>::OnCommandEvent );
+      break;
+    case WXH_FOCUSEVENT:
+      objFunc = wxFocusEventHandler( hbEvtHandler<T>::OnFocusEvent );
+      break;
+    case WXH_GRIDEVENT:
+      objFunc = wxGridEventHandler( hbEvtHandler<T>::OnGridEvent );
+      break;
+    case WXH_INITDIALOGEVENT:
+      objFunc = wxInitDialogEventHandler( hbEvtHandler<T>::OnInitDialogEvent );
+      break;
+    case WXH_KEYEVENT:
+      objFunc = wxKeyEventHandler( hbEvtHandler<T>::OnKeyEvent );
+	  pConnParams->force = true;
+      break;
+    case WXH_MENUEVENT:
+      objFunc = wxMenuEventHandler( hbEvtHandler<T>::OnMenuEvent );
+      break;
+    case WXH_MOUSEEVENT:
+      objFunc = wxMouseEventHandler( hbEvtHandler<T>::OnMouseEvent );
+      break;
+    case WXH_SOCKETEVENT:
+      objFunc = wxSocketEventHandler( hbEvtHandler<T>::OnSocketEvent );
+      break;
+    case WXH_TASKBARICONEVENT:
+      objFunc = wxTaskBarIconEventHandler( hbEvtHandler<T>::OnTaskBarIconEvent );
+      break;
+    case WXH_TIMEREVENT:
+      objFunc = wxTimerEventHandler( hbEvtHandler<T>::OnTimerEvent );
+      break;
+    default:
+      objFunc = NULL;
+  }
+
+  if( objFunc )
+  {
+    wxh_Item* pWxh_Item = wxh_ItemListGet_PWXH_ITEM( this );
+
+    if( pWxh_Item )
+    {
+      pWxh_Item->evtList.push_back( pConnParams );
+      this->Connect( pConnParams->id, pConnParams->lastId, pConnParams->eventType, objFunc );
+    }
+  }
+}
+
+/*
+ * end hbEvtHandler<T> implemention
+ */
 
 /*
   Connect
